<resources>
    <string name="app_name">HomeWork 5</string>
    <string name="register_big">REGISTER</string>
    <string name="register_small">Register</string>
    <string name="log_in_big">LOG IN</string>
    <string name="log_in_small">Log in</string>
    <string name="next">NEXT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="log_out">LOG OUT</string>
    <string name="hello">Hello</string>
    <string name="by_signing_up_you_agree_to_photo_s">By signing up, you agree to Photo\'s</string>
    <string name="terms_of_service"><u>Terms of Service</u>.</string>
    <string name="and">and</string>
    <string name="privacy_policy"><u>Privacy Policy</u>.</string>
</resources>